# template-cmake-tools

./: .gitignore  CMakeLists.txt  README.md  main.cc
include/: CMakeLists.txt  encoder.h
src/: CMakeLists.txt  encoder.cc
tests/: CMakeLists.txt  test_encoder_init_test.cc  test_init.cc
